docs: Fix layout issue in mobile wide screen view

--- a/css/app.css
+++ b/css/app.css
@@ -175,13 +175,6 @@ section .container {
   width: 7.0rem;
 }
 
-.text {
-  color: #000;
-  font-size: 2rem;
-  line-height: 2.8rem;
-  text-align: center;
-}
-
 
 /*** Intro ***/
 section:nth-of-type(1) {
@@ -192,9 +185,9 @@ section:nth-of-type(1) {
   height: calc(100vh + 53px);
 }
 
-section:nth-of-type(1) .text {
-  font-size: 2rem;
-  line-height: 3rem;
+.text {
+  font-size: 1.6rem;
+  line-height: 1.4rem;
   margin: 0 0 2rem 0;
 }
 
@@ -207,7 +200,7 @@ section:nth-of-type(1) .text {
   cursor: pointer;
   display: inline-block;
   font-size: 1.6rem;
-  margin: 53px;
+  margin: 10px 0 50px 0;
   padding: 1.2rem 1.5rem;
   position: relative;
 }
